--- a/client/user/src/mealorder/menu/user-history.html
+++ b/client/user/src/mealorder/menu/user-history.html
@@ -23,7 +23,40 @@
 <dom-module id="user-history">
     <template>
         <style>
+            :host {
+                color: #4f4f4f;
+            }
 
+            paper-card {
+                display: block;
+            }
+
+            vaadin-grid {
+                height: max-content;
+
+                width: 70%;
+                display: block;
+                margin-left: 15%;
+            }
+
+            .vendor {
+                margin-left: 15%;
+                font: bold 24px/1.5 Times, 'New Century Schoolbook', serif;
+            }
+
+            .quantity {
+                text-align: right;
+                padding-right: 10%;
+            }
+
+            .price {
+                text-align: right;
+                padding-right: 10%;
+            }
+
+            .dish {
+                padding-left: 5%;
+            }
         </style>
         <div class="history">
             <dom-repeat items="[[cart]]" as="vendor">
