--- a/client/user/src/mealorder/menu/user-history.html
+++ b/client/user/src/mealorder/menu/user-history.html
@@ -115,7 +115,12 @@
             }
 
             static get properties() {
-                return {}
+                return {
+                    /**
+                     * An array containing items to be displayed.
+                     */
+                    cart: {type: Array}
+                }
             };
         }
 
