Add `user-history` docs

--- a/client/user/src/mealorder/menu/user-history.html
+++ b/client/user/src/mealorder/menu/user-history.html
@@ -108,7 +108,14 @@
         </div>
     </template>
     <script>
-
+        /**
+         * User's history for individual day.
+         *
+         * <p>Is adopted for both desktop and mobile.
+         *
+         * @customElement
+         * @polymer
+         */
         class UserHistory extends Polymer.Element {
             static get is() {
                 return 'user-history';
