Add redux actions

--- a/client/user/src/mealorder/shell/actions/array-actions.html
+++ b/client/user/src/mealorder/shell/actions/array-actions.html
@@ -19,5 +19,10 @@
   -->
 
 <script>
-    const ArrayAction = {}
+    const ArrayAction = {
+        MENU_FOR_DAY: 'MENU_FOR_DAY',
+        ADD_DISH: 'ADD_DISH',
+        REMOVE_DISH: 'REMOVE_DISH',
+        CHANGE_HISTORY_DAY: 'CHANGE_HISTORY_DAY'
+    }
 </script>
