--- a/client/user/src/mealorder/meal-order.html
+++ b/client/user/src/mealorder/meal-order.html
@@ -176,6 +176,7 @@
                 width: 100px;
                 display: flex;
                 justify-content: space-around;
+                align-items: center;
             }
         </style>
 
