Rename ArrayAction -> UserActions

--- a/client/user/src/mealorder/shell/redux-store.html
+++ b/client/user/src/mealorder/shell/redux-store.html
@@ -20,7 +20,7 @@
 
 <link rel="import" href="../../../bower_components/polymer-redux/polymer-redux.html">
 <link rel="import" href="reducers/reducers.html">
-<link rel="import" href="actions/array-actions.html">
+<link rel="import" href="actions/user-actions.html">
 <script>
 
     const initialState = {};
