Add `meal-order drawer` to `meal-order-main-app`

--- a/client/user/src/mealorder/meal-order-main-app.html
+++ b/client/user/src/mealorder/meal-order-main-app.html
@@ -200,9 +200,7 @@
                         </div>
                     </app-toolbar>
                 </iron-pages>
-
-
-
+                <meal-order-drawer order="[[order]]" currentDate="[[currentDate]]"></meal-order-drawer>
             </app-drawer>
 
             <app-header-layout>
