--- a/client/user/src/mealorder/shell/redux-store.html
+++ b/client/user/src/mealorder/shell/redux-store.html
@@ -22,8 +22,173 @@
 <link rel="import" href="reducers/reducers.html">
 <link rel="import" href="actions/user-actions.html">
 <script>
+    const arrayOfDates = [{
+        date: {
+            year: '2018',
+            month: '03',
+            day: '21',
+        },
+        hasMenu: true
+    },
+        {
+            date: {
+                year: '2018',
+                month: '03',
+                day: '22',
+            },
+            hasMenu: true
+        },
+        {
+            date: {
+                year: '2018',
+                month: '03',
+                day: '23',
+            },
+            hasMenu: true
+        },
+        {
+            date: {
+                year: '2018',
+                month: '03',
+                day: '24',
+            },
+            hasMenu: false
+        },
+        {
+            date: {
+                year: '2018',
+                month: '03',
+                day: '25',
+            },
+            hasMenu: false
+        }
+        , {
+            date: {
+                year: '2018',
+                month: '03',
+                day: '26',
+            },
+            hasMenu: true
+        }
+        , {
+            date: {
+                year: '2018',
+                month: '03',
+                day: '27',
+            },
+            hasMenu: true
+        }
+        , {
+            date: {
+                year: '2018',
+                month: '03',
+                day: '28',
+            },
+            hasMenu: true
+        }];
 
-    const initialState = {};
+    const initialState = {
+        menuForDates: arrayOfDates,
+        menuForDay: [],
+
+        menu: [
+            {
+                name: 'Пюре',
+                date: {
+                    year: '2018',
+                    month: '03',
+                    day: '21',
+                },
+                categories: [{
+                    categoryName: 'Первое блюдо', dishes: [
+                        {title: 'Борщ украинский', price: 35},
+                        {title: 'Солянка', price: 40},
+                        {title: 'Суп гороховый', price: 140},
+                        {title: 'Уха', price: 35},
+                        {title: 'Суп-пюре грибной', price: 40}]
+                }
+                    , {
+                        categoryName: 'Второе блюдо', dishes: [
+                            {title: 'Утиные крылышки', price: 40},
+                            {title: 'Куриные крылышки', price: 45}]
+                    }
+                ]
+            },
+            {
+                name: 'Позитив',
+                date: {
+                    year: '2018',
+                    month: '03',
+                    day: '21',
+                },
+                categories: [{
+                    categoryName: 'Первое блюдо', dishes: [
+                        {title: 'Борщ украинский', price: 35},
+                        {title: 'Суп с лапшой', price: 40},
+                        {title: 'Борщ красный', price: 40},
+                        {title: 'Борщ зеленый', price: 35}]
+                }
+                    , {
+                        categoryName: 'Второе блюдо', dishes: [
+                            {title: 'Стейк из лосося', price: 40},
+                            {title: 'Стейк из говядины', price: 45}]
+                    },
+                    {
+                        categoryName: 'Напитки', dishes: [
+                            {title: 'Лимонад', price: 40}]
+                    }
+                ]
+            },
+            {
+                name: 'Пюре',
+                date: {
+                    year: '2018',
+                    month: '03',
+                    day: '22',
+                },
+                categories: [{
+                    categoryName: 'Первое блюдо', dishes: [
+                        {title: 'Суп гречневый', price: 35},
+                        {title: 'Солянка', price: 40},
+                        {title: 'Суп гороховый', price: 140},
+                        {title: 'Уха', price: 35},
+                        {title: 'Суп-пюре грибной', price: 40}]
+                }
+                    , {
+                        categoryName: 'Второе блюдо', dishes: [
+                            {title: 'Утиные крылышки', price: 40},
+                            {title: 'Куриные крылышки', price: 45}]
+                    }
+                ]
+            },
+            {
+                name: 'Позитив',
+                date: {
+                    year: '2018',
+                    month: '03',
+                    day: '22',
+                },
+                categories: [{
+                    categoryName: 'Первое блюдо', dishes: [
+                        {title: 'Суп сырный', price: 35},
+                        {title: 'Суп с лапшой', price: 40},
+                        {title: 'Борщ красный', price: 40},
+                        {title: 'Борщ зеленый', price: 35}]
+                }
+                    , {
+                        categoryName: 'Второе блюдо', dishes: [
+                            {title: 'Стейк из лосося', price: 40},
+                            {title: 'Стейк из говядины', price: 45}]
+                    },
+                    {
+                        categoryName: 'Напитки', dishes: [
+                            {title: 'Лимонад', price: 40}]
+                    }
+                ]
+            }],
+
+    };
+
     const store = Redux.createStore(reducer);
 
     window.MealOrderApp = {};
