Refactor reducer for the `user-cart` component

--- a/client/user/src/mealorder/shell/reducers/reducers.html
+++ b/client/user/src/mealorder/shell/reducers/reducers.html
@@ -23,6 +23,10 @@
                 return initialState;
             }
             switch (action.type) {
+
+                case UserAction.REMOVE_DISH: {
+                    return state;
+                }
                 default :
                     return state;
             }
