Add reducer for the `user-history` component

--- a/client/user/src/mealorder/shell/actions/user-actions.html
+++ b/client/user/src/mealorder/shell/actions/user-actions.html
@@ -19,5 +19,7 @@
   -->
 
 <script>
-    const UserAction = {}
+    const UserAction = {
+        CHANGE_HISTORY_DAY: "CHANGE_HISTORY_DAY"
+    }
 </script>
