Import `meal-order-drawer` to `meal-order-main-app` component

--- a/client/user/src/mealorder/meal-order-main-app.html
+++ b/client/user/src/mealorder/meal-order-main-app.html
@@ -34,8 +34,10 @@
 <link rel="import" href="../../bower_components/paper-tabs/paper-tabs.html">
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../../bower_components/iron-icons/maps-icons.html">
-
+<link rel="import" href="menu/menu-order.html">
 <link rel="import" href="shell/redux-store.html">
+
+<link rel="import" href="menu/meal-order-drawer.html">
 <dom-module id="meal-order-main-app">
     <template>
         <style>
@@ -168,7 +170,7 @@
                 align-items: center;
             }
         </style>
-
+s
         <app-location route="{{route}}"
                       use-hash-as-path></app-location>
 
@@ -249,14 +251,13 @@
                         </div>
                     </app-toolbar>
                 </app-header>
-
                 <iron-pages
                         selected="[[routeData.page]]"
                         attr-for-selected="name"
                         fallback-selection="view404"
                         role="main">
-                    <menu-order></menu-order>
-                    <user-history></user-history>
+                    <menu-order name="menu" on-dish-added="_addDishToOrder"></menu-order>
+                    <user-history name="history" cart="[[history]]" narrow="[[narrow]]"></user-history>
                 </iron-pages>
 
             </app-header-layout>
