--- a/client/user/src/mealorder/menu/meal-order-menu-order.html
+++ b/client/user/src/mealorder/menu/meal-order-menu-order.html
@@ -26,7 +26,7 @@
 <link rel="import" href="../shell/redux-store.html">
 <link rel="import" href="../../../bower_components/polymer/lib/elements/dom-repeat.html">
 <link rel="import" href="../menu/meal-order-vendor-menus.html">
-<dom-module id="menu-order">
+<dom-module id="meal-order-menu-order">
     <template>
         <style>
             body {
@@ -113,8 +113,8 @@
                 fallback-selection="view404"
                 role="main">
 
-            <vendor-menus name="[[routeData.menu]]"
-                          items="[[menu]]" route="[[subroute]]" on-dish-added="addDishToOrder"></vendor-menus>
+            <meal-order-vendor-menus name="[[routeData.menu]]"
+                          items="[[menu]]" route="[[subroute]]" on-dish-added="addDishToOrder"></meal-order-vendor-menus>
         </iron-pages>
     </template>
     <script>
@@ -129,9 +129,9 @@
          * @polymer
          * @ReduxMixin
          */
-        class MenuOrder extends ReduxMixin(Polymer.Element) {
+        class MealOrderMenuOrder extends ReduxMixin(Polymer.Element) {
             static get is() {
-                return 'menu-order';
+                return 'meal-order-menu-order';
             }
 
             static get properties() {
@@ -200,6 +200,6 @@
             }
 
         }
-        window.customElements.define(MenuOrder.is, MenuOrder);
+        window.customElements.define(MealOrderMenuOrder.is, MealOrderMenuOrder);
     </script>
 </dom-module>
