--- a/client/user/src/mealorder/menu/meal-order-vendor-menu.html
+++ b/client/user/src/mealorder/menu/meal-order-vendor-menu.html
@@ -126,7 +126,7 @@
                                             </div>
                                             <div class="add-dish-icon">
                                                 <paper-icon-button icon="add"
-                                                                   on-click="addDish"></paper-icon-button>
+                                                                   on-click="_addDish"></paper-icon-button>
                                             </div>
                                         </paper-item>
                                     </div>
@@ -139,7 +139,11 @@
         </dom-repeat>
     </template>
     <script>
-
+        /**
+         * vendor-menu represents a menu of a vendor for current date
+         *
+         * <p>Is adopted for both desktop and mobile.
+         */
         class MealOrderVendorMenu extends Polymer.Element {
             static get is() {
                 return 'meal-order-vendor-menu';
@@ -147,13 +151,19 @@
 
             static get properties() {
                 return {
+                    /**
+                     * Menu of a vendor.
+                     *
+                     * Initial state represents its structure.
+                     */
                     items: {
-                        type: Array
+                        type: Array,
+                        value: [{categoryName: '', dishes: [{title: '', price: ''}, {}]}, {}]
                     }
                 }
             };
 
-            addDish(e) {
+            _addDish(e) {
                 const dish = {};
                 dish.vendor = this.vendor;
                 dish.name = e.model.__data.dish.title;
