--- a/client/user/src/mealorder/menu/meal-order-user-history.html
+++ b/client/user/src/mealorder/menu/meal-order-user-history.html
@@ -22,7 +22,7 @@
 
 <link rel="import" href="../../../bower_components/paper-card/paper-card.html">
 <link rel="import" href="../../../bower_components/vaadin-grid/vaadin-grid.html">
-<dom-module id="user-history">
+<dom-module id="meal-order-user-history">
     <template>
         <style>
             :host {
@@ -118,9 +118,9 @@
          * @customElement
          * @polymer
          */
-        class UserHistory extends Polymer.Element {
+        class MealOrderUserHistory extends Polymer.Element {
             static get is() {
-                return 'user-history';
+                return 'meal-order-user-history';
             }
 
             static get properties() {
@@ -142,6 +142,6 @@
             }
         }
 
-        window.customElements.define(UserHistory.is, UserHistory);
+        window.customElements.define(MealOrderUserHistory.is, MealOrderUserHistory);
     </script>
 </dom-module>
