--- a/client/user/src/mealorder/menu/menu-order.html
+++ b/client/user/src/mealorder/menu/menu-order.html
@@ -27,7 +27,7 @@
 <link rel="import" href="../../../bower_components/polymer/lib/elements/dom-repeat.html">
 
 <link rel="import" href="vendor-menus.html">
-<link rel="import" href="user-history.html">
+<link rel="import" href="meal-order-user-history.html">
 <dom-module id="menu-order">
     <template>
         <style>
