--- a/client/user/src/mealorder/menu/meal-order-drawer.html
+++ b/client/user/src/mealorder/menu/meal-order-drawer.html
@@ -20,6 +20,9 @@
 <link rel="import" href="../../../bower_components/app-route/app-location.html">
 <link rel="import" href="../../../bower_components/app-route/app-route.html">
 <link rel="import" href="../../../bower_components/iron-pages/iron-pages.html">
+<link rel="import" href="../../../bower_components/app-datepicker/app-datepicker.html">
+
+<link rel="import" href="meal-order-user-cart.html">
 
 <dom-module id="meal-order-drawer">
     <template>
@@ -47,8 +50,8 @@
                 attr-for-selected="name"
                 fallback-selection="view404"
                 role="main">
-            <user-cart name="menu" order="[[order]]"
-                       on-dish-removed="_removeDishFromOrder"></user-cart>
+            <meal-order-user-cart name="menu" order="[[order]]"
+                                  on-dish-removed="_removeDishFromOrder"></meal-order-user-cart>
             <app-datepicker name="history" id="date-picker" view="vertical"
                             date="{{currentDate}}" auto-update-date="true"></app-datepicker>
         </iron-pages>
