--- a/client/user/src/mealorder/shell/redux-store.html
+++ b/client/user/src/mealorder/shell/redux-store.html
@@ -23,7 +23,7 @@
 <link rel="import" href="actions/user-actions.html">
 <script>
 
-    const initialState = {};
+    window.initialState = {};
     const store = Redux.createStore(reducer);
 
     window.MealOrderApp = {};
