Add `ADD_DISH` action

--- a/client/user/src/mealorder/meal-order-main-app.html
+++ b/client/user/src/mealorder/meal-order-main-app.html
@@ -284,6 +284,11 @@
          * @ReduxMixin
          */
         class MealOrderMainApp extends ReduxMixin(Polymer.Element) {
+
+            test() {
+                console.log("DS");
+            }
+
             static get is() {
                 return 'meal-order-main-app';
             }
