--- a/client/user/src/mealorder/shell/actions/user-actions.html
+++ b/client/user/src/mealorder/shell/actions/user-actions.html
@@ -22,6 +22,7 @@
     const UserAction = {
         MENU_FOR_DAY: "MENU_FOR_DAY",
         CHANGE_HISTORY_DAY: "CHANGE_HISTORY_DAY",
+        ADD_DISH: "ADD_DISH",
         REMOVE_DISH : "REMOVE_DISH"
     }
 </script>
